--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Jupyter[[:space:]]Notebooks filter=lfs diff=lfs merge=lfs -text
 jup filter=lfs diff=lfs merge=lfs -text
+Jupyter_Notebooks filter=lfs diff=lfs merge=lfs -text
